auto publishing updates to notebooks

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7e6772e3",
+   "id": "4b93b434",
    "metadata": {},
    "source": [
     "# Quantitative Economics with Python (JAX)\n",
@@ -16,57 +16,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaedd8c4",
+   "id": "7b77a275",
    "metadata": {},
    "source": [
     "# Introduction\n",
     "\n",
-    "- [About these Lectures](https://python.quantecon.org/about.html)\n",
-    "- [JAX](https://python.quantecon.org/jax_intro.html)\n",
-    "- [Newton’s Method via JAX](https://python.quantecon.org/newtons_method.html)"
+    "- [About these Lectures](https://jax.quantecon.org/about.html)\n",
+    "- [JAX](https://jax.quantecon.org/jax_intro.html)\n",
+    "- [Newton’s Method via JAX](https://jax.quantecon.org/newtons_method.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6b6bbbad",
+   "id": "94bbf1e1",
    "metadata": {},
    "source": [
     "# Simulation\n",
     "\n",
-    "- [Inventory Dynamics](https://python.quantecon.org/inventory_dynamics.html)\n",
-    "- [Kesten Processes and Firm Dynamics](https://python.quantecon.org/kesten_processes.html)\n",
-    "- [Wealth Distribution Dynamics](https://python.quantecon.org/wealth_dynamics.html)"
+    "- [Inventory Dynamics](https://jax.quantecon.org/inventory_dynamics.html)\n",
+    "- [Kesten Processes and Firm Dynamics](https://jax.quantecon.org/kesten_processes.html)\n",
+    "- [Wealth Distribution Dynamics](https://jax.quantecon.org/wealth_dynamics.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7fdd7ddb",
+   "id": "c321fcd2",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
     "\n",
-    "- [Shortest Paths](https://python.quantecon.org/short_path.html)\n",
-    "- [Optimal Investment](https://python.quantecon.org/opt_invest.html)\n",
-    "- [Optimal Savings](https://python.quantecon.org/opt_savings.html)\n",
-    "- [Default Risk and Income Fluctuations](https://python.quantecon.org/arellano.html)\n",
-    "- [The Aiyagari Model](https://python.quantecon.org/aiyagari_jax.html)"
+    "- [Shortest Paths](https://jax.quantecon.org/short_path.html)\n",
+    "- [Optimal Investment](https://jax.quantecon.org/opt_invest.html)\n",
+    "- [Optimal Savings](https://jax.quantecon.org/opt_savings.html)\n",
+    "- [Default Risk and Income Fluctuations](https://jax.quantecon.org/arellano.html)\n",
+    "- [The Aiyagari Model](https://jax.quantecon.org/aiyagari_jax.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "29cb9791",
+   "id": "e75ce250",
    "metadata": {},
    "source": [
     "# Other\n",
     "\n",
-    "- [Troubleshooting](https://python.quantecon.org/troubleshooting.html)\n",
-    "- [References](https://python.quantecon.org/zreferences.html)\n",
-    "- [Execution Statistics](https://python.quantecon.org/status.html)"
+    "- [Troubleshooting](https://jax.quantecon.org/troubleshooting.html)\n",
+    "- [References](https://jax.quantecon.org/zreferences.html)\n",
+    "- [Execution Statistics](https://jax.quantecon.org/status.html)"
    ]
   }
  ],
  "metadata": {
-  "date": 1683530831.2172887,
+  "date": 1683534859.0042396,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
