--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f2f64ba9",
+   "id": "b1b412e8",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "521112e2",
+   "id": "c9b22754",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1511fe9d",
+   "id": "26075fe3",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9d53307",
+   "id": "4538efc9",
    "metadata": {
     "hide-output": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7dd0659",
+   "id": "828a635a",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6d987f1",
+   "id": "f9e441d2",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "342fb505",
+   "id": "1ed8b8d9",
    "metadata": {},
    "source": [
     "Let’s check the backend used by JAX and the devices available"
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "622c0371",
+   "id": "010151d2",
    "metadata": {
     "hide-output": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8385a08c",
+   "id": "c0df6167",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be08e394",
+   "id": "bcb778c6",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06f23b01",
+   "id": "19f079da",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c4a0ee4",
+   "id": "d233b417",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e81627b",
+   "id": "20324e59",
    "metadata": {
     "hide-output": false
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b7c1839",
+   "id": "cdc7c677",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ad178c4",
+   "id": "627930f7",
    "metadata": {
     "hide-output": false
    },
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "438f959b",
+   "id": "23418e86",
    "metadata": {},
    "source": [
     "Notice that we do not JIT-compile the `for` loops, since\n",
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b91d5274",
+   "id": "4c3dbe00",
    "metadata": {
     "hide-output": false
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ecf6417",
+   "id": "ecc115c4",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56f73830",
+   "id": "a52a68c2",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.scan`\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1622b0e6",
+   "id": "ccf1b33a",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6c4328f",
+   "id": "807e9731",
    "metadata": {},
    "source": [
     "In this case, `M` is small enough for the code to run and\n",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1f761ee",
+   "id": "4b17d7b6",
    "metadata": {
     "hide-output": false
    },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "588c4dd1",
+   "id": "82596d83",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "986aae4c",
+   "id": "78078005",
    "metadata": {
     "hide-output": false
    },
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02147561",
+   "id": "1a09c040",
    "metadata": {},
    "source": [
     "Let’s rerun the `for` loop version on smaller `M` to compare the speed"
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbdacb71",
+   "id": "c30fb4d2",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41c664ad",
+   "id": "29a8e89a",
    "metadata": {},
    "source": [
     "We see that the `lax.scan` version is faster than the `for` loop version\n",
@@ -514,7 +514,7 @@
   }
  ],
  "metadata": {
-  "date": 1683530831.4850655,
+  "date": 1683534859.25612,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
