--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2ec1471e",
+   "id": "9de184b8",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f77994d1",
+   "id": "2319670d",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "915660a2",
+   "id": "534676c6",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44ec39c6",
+   "id": "40ac9274",
    "metadata": {},
    "source": [
     "Let’s check the backend used by JAX and the devices available."
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9960125c",
+   "id": "48804282",
    "metadata": {
     "hide-output": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31e2a7a8",
+   "id": "13cbb6f6",
    "metadata": {},
    "source": [
     "## The Two Goods Market Equilibrium\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dc013f2",
+   "id": "ce0b6be7",
    "metadata": {},
    "source": [
     "### The Multivariable Market Equilibrium\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "571e219e",
+   "id": "5cc404ee",
    "metadata": {
     "hide-output": false
    },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "494c0672",
+   "id": "40eaf1f7",
    "metadata": {},
    "source": [
     "## Using Newton’s Method\n",
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e484a2f2",
+   "id": "29581a63",
    "metadata": {
     "hide-output": false
    },
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29528134",
+   "id": "4e90b85a",
    "metadata": {},
    "source": [
     "### A High-Dimensional Problem\n",
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "944cead5",
+   "id": "610965e0",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54e013e1",
+   "id": "29fbb751",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ec633cb",
+   "id": "b1ff350c",
    "metadata": {
     "hide-output": false
    },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e32a94a0",
+   "id": "c34e197b",
    "metadata": {},
    "source": [
     "By leveraging the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b287d57",
+   "id": "c07ecac9",
    "metadata": {
     "hide-output": false
    },
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c67c206",
+   "id": "8602b986",
    "metadata": {
     "hide-output": false
    },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0106efa2",
+   "id": "bd7279e2",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a71e401",
+   "id": "ff24fdd1",
    "metadata": {
     "hide-output": false
    },
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3f55782",
+   "id": "61a08765",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3d0d801",
+   "id": "c45f3e83",
    "metadata": {},
    "source": [
     "The result is also less accurate."
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7aaee9c",
+   "id": "ef7edb19",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b94122fc",
+   "id": "cb7d18a5",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -423,10 +423,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49270ee6",
+   "id": "3dff8f85",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 3.1](https://python.quantecon.org/#newton_ex1)\n",
+    "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#newton_ex1)\n",
     "\n",
     "Let’s first define the parameters for this problem"
    ]
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fab2128",
+   "id": "2836b21a",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ca15696",
+   "id": "44107ecb",
    "metadata": {},
    "source": [
     "Then define the multivariate version of the formula for the [law of motion of captial](https://python.quantecon.org/newton_method.html#solow)"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a482ee16",
+   "id": "4a910be2",
    "metadata": {
     "hide-output": false
    },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13a121da",
+   "id": "2b78f45b",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cd2234a",
+   "id": "24521878",
    "metadata": {
     "hide-output": false
    },
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0738dd9",
+   "id": "e2d795a8",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values given the well-defined property of this question.\n",
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfba0a37",
+   "id": "c3de670f",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a604cdc",
+   "id": "d99f25ed",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeebdf4b",
+   "id": "522e840d",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4b002cd",
+   "id": "c5a78ae7",
    "metadata": {},
    "source": [
     "The result is very close to the ground truth but still slightly different.\n",
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bfb82fe",
+   "id": "38063673",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d558549f",
+   "id": "f4da0b11",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb9dcb5b",
+   "id": "d2a31743",
    "metadata": {},
    "source": [
     "## Exercise 3.2\n",
@@ -636,10 +636,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6a6d510",
+   "id": "37c2a2dd",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 3.2](https://python.quantecon.org/#newton_ex2)\n",
+    "## Solution to[ Exercise 3.2](https://jax.quantecon.org/#newton_ex2)\n",
     "\n",
     "Define parameters and initial values"
    ]
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee0c7002",
+   "id": "ed123b33",
    "metadata": {
     "hide-output": false
    },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b26c928",
+   "id": "ff38528b",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "335fbc3c",
+   "id": "88c165ca",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "548c00d7",
+   "id": "87a9254c",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9282516",
+   "id": "34a6e79a",
    "metadata": {
     "hide-output": false
    },
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4b9d03c",
+   "id": "861f1300",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -726,7 +726,7 @@
   }
  ],
  "metadata": {
-  "date": 1683530831.5200624,
+  "date": 1683534859.29193,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
