--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f96098e3",
+   "id": "1efa9dda",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b708e8a2",
+   "id": "e58108ff",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dd24f99",
+   "id": "31c0d511",
    "metadata": {
     "hide-output": false
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bc0b50d",
+   "id": "7558537b",
    "metadata": {},
    "source": [
     "Let’s check the backend used by JAX and the devices available."
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47d204ae",
+   "id": "44070578",
    "metadata": {
     "hide-output": false
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e37b457",
+   "id": "41441090",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd53f7a1",
+   "id": "a95687fb",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59cde653",
+   "id": "92d49e69",
    "metadata": {
     "hide-output": false
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "769618f8",
+   "id": "44a279af",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da6ef741",
+   "id": "2b67a516",
    "metadata": {
     "hide-output": false
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2ca4c3a",
+   "id": "88346dfc",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1708a5c",
+   "id": "50c3865d",
    "metadata": {
     "hide-output": false
    },
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e9b606c",
+   "id": "c7df086a",
    "metadata": {
     "hide-output": false
    },
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ff9bb37",
+   "id": "29ec6ad7",
    "metadata": {
     "hide-output": false
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ab92489",
+   "id": "e14b17e5",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a730773b",
+   "id": "c84c437a",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b029229b",
+   "id": "5b456318",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a616779",
+   "id": "d00c634f",
    "metadata": {
     "hide-output": false
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08716e2b",
+   "id": "e9b33dc1",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "696be0e0",
+   "id": "269be9ce",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01e13696",
+   "id": "7dfc6792",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a9dbd38",
+   "id": "5089f7a0",
    "metadata": {
     "hide-output": false
    },
@@ -421,10 +421,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf748f04",
+   "id": "4714da8f",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 7.1](https://python.quantecon.org/#short_path_ex1)\n",
+    "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#short_path_ex1)\n",
     "\n",
     "First let’s write a function that reads in the graph data above and builds a distance matrix."
    ]
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69e9f556",
+   "id": "02da16a7",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccedd69d",
+   "id": "419d7544",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcf427bb",
+   "id": "8537a31c",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e879ee9d",
+   "id": "bd1ffd78",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76e7cc5b",
+   "id": "8ae70aa0",
    "metadata": {
     "hide-output": false
    },
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e48bfdbc",
+   "id": "0889b5cf",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a453ba3",
+   "id": "facf6307",
    "metadata": {
     "hide-output": false
    },
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f9dfea1",
+   "id": "3ea1fc22",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18d3ed45",
+   "id": "cf148f0c",
    "metadata": {
     "hide-output": false
    },
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2518b7a",
+   "id": "95334ef7",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "752f1ded",
+   "id": "dec15598",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be4a0e47",
+   "id": "28a7974e",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fadbbe4",
+   "id": "8292fa8e",
    "metadata": {
     "hide-output": false
    },
@@ -623,7 +623,7 @@
   }
  ],
  "metadata": {
-  "date": 1683530831.614327,
+  "date": 1683534859.3837535,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
