--- a/status.ipynb
+++ b/status.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ab5ab710",
+   "id": "544f92d1",
    "metadata": {},
    "source": [
     "# Execution Statistics\n",
     "\n",
     "This table contains the latest execution statistics.\n",
     "\n",
-    "[](https://python.quantecon.org/aiyagari_jax.html)[](https://python.quantecon.org/arellano.html)[](https://python.quantecon.org/intro.html)[](https://python.quantecon.org/inventory_dynamics.html)[](https://python.quantecon.org/jax_intro.html)[](https://python.quantecon.org/kesten_processes.html)[](https://python.quantecon.org/newtons_method.html)[](https://python.quantecon.org/opt_invest.html)[](https://python.quantecon.org/opt_savings.html)[](https://python.quantecon.org/short_path.html)[](https://python.quantecon.org/.html)[](https://python.quantecon.org/troubleshooting.html)[](https://python.quantecon.org/wealth_dynamics.html)[](https://python.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
+    "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
     "|:------------------:|:------------------:|:------------------:|:------------------:|:------------------:|\n",
     "|aiyagari_jax|2023-05-08 07:06|cache|59.14|✅|\n",
     "|arellano|2023-05-08 07:07|cache|35.02|✅|\n",
@@ -34,7 +34,7 @@
   }
  ],
  "metadata": {
-  "date": 1683530831.632024,
+  "date": 1683534859.4004157,
   "filename": "status.md",
   "kernelspec": {
    "display_name": "Python",
