--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2ae3db03",
+   "id": "9e44dcab",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd157b9c",
+   "id": "3edc0d83",
    "metadata": {},
    "source": [
     "# References\n",
@@ -22,7 +22,7 @@
   }
  ],
  "metadata": {
-  "date": 1683530831.692492,
+  "date": 1683534859.4584663,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
