--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2023dc4f",
+   "id": "8b576511",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45685aa7",
+   "id": "866da40b",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e69eda83",
+   "id": "76455a43",
    "metadata": {},
    "source": [
     "### References\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc94f699",
+   "id": "aa50b18b",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18a375f3",
+   "id": "febde16d",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7485b2e3",
+   "id": "8a6b2bcb",
    "metadata": {},
    "source": [
     "Let’s check the backend used by JAX and the devices available."
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acd8c23a",
+   "id": "57e091ff",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26da0e73",
+   "id": "1647c659",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00854256",
+   "id": "430e65ea",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "816f8327",
+   "id": "71381378",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5857003",
+   "id": "96110ace",
    "metadata": {
     "hide-output": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b065160",
+   "id": "60187700",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffa84526",
+   "id": "b9498b1a",
    "metadata": {
     "hide-output": false
    },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4b593a3",
+   "id": "a340c519",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81e1926e",
+   "id": "02ee43b4",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63868538",
+   "id": "3bed982a",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef90250b",
+   "id": "2e630964",
    "metadata": {
     "hide-output": false
    },
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd7218aa",
+   "id": "cb517ae1",
    "metadata": {},
    "source": [
     "This is the vectorized version of the right-hand side of the Bellman equation\n",
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52c87596",
+   "id": "842281bf",
    "metadata": {
     "hide-output": false
    },
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a12287d",
+   "id": "54635265",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0302d6d1",
+   "id": "90e68cd1",
    "metadata": {
     "hide-output": false
    },
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1752b504",
+   "id": "d48e9502",
    "metadata": {},
    "source": [
     "We need to know rewards at a given policy for policy iteration.\n",
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f3196ad",
+   "id": "6520884e",
    "metadata": {
     "hide-output": false
    },
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8696c38",
+   "id": "509ddd78",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34b8e3f5",
+   "id": "781dc53f",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e63fd009",
+   "id": "65ada784",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e669f515",
+   "id": "0bf8cf58",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec1c3ddb",
+   "id": "104a46c9",
    "metadata": {},
    "source": [
     "The following function is used for optimistic policy iteration."
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "825acf04",
+   "id": "bd8803c8",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58dbe25d",
+   "id": "e3ac8d67",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e1b6622",
+   "id": "48874647",
    "metadata": {
     "hide-output": false
    },
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3473a5c",
+   "id": "f223473f",
    "metadata": {},
    "source": [
     "We can also solve the problem using optimistic policy iteration."
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0396333",
+   "id": "04198e6b",
    "metadata": {
     "hide-output": false
    },
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caba28b4",
+   "id": "4ef7631c",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "007ec51b",
+   "id": "ebdb08b5",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1256492",
+   "id": "a42fb3c6",
    "metadata": {
     "hide-output": false
    },
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c91f047",
+   "id": "4861ce44",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cb40b82",
+   "id": "d45ecaca",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6c99d64",
+   "id": "4d4fed71",
    "metadata": {
     "hide-output": false
    },
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ca743d9",
+   "id": "f070751b",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -773,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc8db8bf",
+   "id": "e2075cfe",
    "metadata": {
     "hide-output": false
    },
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9abdf8d0",
+   "id": "0c0052a6",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1118bf5",
+   "id": "9d939a1e",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fae3dd23",
+   "id": "10e348d6",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2e6f9a2",
+   "id": "0554d906",
    "metadata": {
     "hide-output": false
    },
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59fde726",
+   "id": "8bc7cd50",
    "metadata": {},
    "source": [
     "Now we are ready to compute capital supply by households given wages and interest rates."
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d7688ec",
+   "id": "935c0efa",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f35fbe8b",
+   "id": "32c64316",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6abc2ea2",
+   "id": "c83ca65e",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -940,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36b093ce",
+   "id": "9456e072",
    "metadata": {
     "hide-output": false
    },
@@ -958,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06681dbc",
+   "id": "75b464d4",
    "metadata": {
     "hide-output": false
    },
@@ -977,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07e45bf9",
+   "id": "a3235ada",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cced0c15",
+   "id": "05971938",
    "metadata": {},
    "source": [
     "Here’s a plot of the excess demand function.\n",
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33372cbe",
+   "id": "f7c6d652",
    "metadata": {
     "hide-output": false
    },
@@ -1025,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1abe4aad",
+   "id": "96fa5eec",
    "metadata": {
     "hide-output": false
    },
@@ -1041,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b39d1ce4",
+   "id": "112c10ce",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d034439",
+   "id": "a8498afd",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1071,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "362f1332",
+   "id": "fbef67f5",
    "metadata": {
     "hide-output": false
    },
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "804e8af2",
+   "id": "783ee44d",
    "metadata": {},
    "source": [
     "Now we call the bisection function on excess demand."
@@ -1107,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b69ef475",
+   "id": "bd67e221",
    "metadata": {
     "hide-output": false
    },
@@ -1121,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bd056f4",
+   "id": "d34f8dc9",
    "metadata": {
     "hide-output": false
    },
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65f64a6f",
+   "id": "76135b79",
    "metadata": {},
    "source": [
     "Notice how quickly we can compute the equilibrium capital stock using a simple\n",
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20ba28f8",
+   "id": "bc20e93e",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dea9acff",
+   "id": "d03b1b2e",
    "metadata": {},
    "source": [
     "## Exercise 11.1\n",
@@ -1164,16 +1164,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06ae53cc",
+   "id": "a6058ed2",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 11.1](https://python.quantecon.org/#aygr_ex1)"
+    "## Solution to[ Exercise 11.1](https://jax.quantecon.org/#aygr_ex1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "064ebffd",
+   "id": "4a7a6e2c",
    "metadata": {
     "hide-output": false
    },
@@ -1191,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e25e479",
+   "id": "f9efbbdc",
    "metadata": {
     "hide-output": false
    },
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e544636b",
+   "id": "bb68d58c",
    "metadata": {},
    "source": [
     "## Exercise 11.2\n",
@@ -1229,10 +1229,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf4f772f",
+   "id": "a30b35ce",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 11.2](https://python.quantecon.org/#aygr_ex2)\n",
+    "## Solution to[ Exercise 11.2](https://jax.quantecon.org/#aygr_ex2)\n",
     "\n",
     "Let’s define the utility function"
    ]
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6edeabc3",
+   "id": "743f0066",
    "metadata": {
     "hide-output": false
    },
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ba9a708",
+   "id": "e9f146f3",
    "metadata": {},
    "source": [
     "We need to re-compile all the jitted functions in order notice the change\n",
@@ -1263,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0e5355f",
+   "id": "d100b9e2",
    "metadata": {
     "hide-output": false
    },
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d75e42e2",
+   "id": "e0cb0d4b",
    "metadata": {},
    "source": [
     "Now, let’s plot the the demand for capital by firms"
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc1c727d",
+   "id": "a8ce72a0",
    "metadata": {
     "hide-output": false
    },
@@ -1316,7 +1316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27a88b96",
+   "id": "0178f9a7",
    "metadata": {
     "hide-output": false
    },
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "408a4e5d",
+   "id": "eb75c6b6",
    "metadata": {},
    "source": [
     "Compute the equilibrium"
@@ -1346,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b53aa186",
+   "id": "047c5984",
    "metadata": {
     "hide-output": false
    },
@@ -1361,7 +1361,7 @@
   }
  ],
  "metadata": {
-  "date": 1683530831.1386304,
+  "date": 1683534858.926567,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
