--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "45dddde1",
+   "id": "e03c9557",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f06583c2",
+   "id": "331be430",
    "metadata": {
     "hide-output": false
    },
@@ -24,12 +24,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c5997c4",
+   "id": "1a3df702",
    "metadata": {},
    "source": [
     "## Overview\n",
     "\n",
-    "This lecture computes versions of Arellano’s [[Are08](https://python.quantecon.org/zreferences.html#id255)] model of sovereign default.\n",
+    "This lecture computes versions of Arellano’s [[Are08](https://jax.quantecon.org/zreferences.html#id255)] model of sovereign default.\n",
     "\n",
     "The model describes interactions among default risk, output, and an\n",
     "equilibrium interest rate that includes a premium for endogenous default risk.\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35bb6c0d",
+   "id": "7cb3df1e",
    "metadata": {
     "hide-output": false
    },
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad5a7710",
+   "id": "30eed259",
    "metadata": {
     "hide-output": false
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3bd73c5",
+   "id": "03e36256",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f865b52",
+   "id": "6db5c122",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe9573c",
+   "id": "e1218bb9",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66097746",
+   "id": "cc45a6f1",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c2f3560",
+   "id": "e045890b",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f812b9f",
+   "id": "c3e04c38",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68dd8502",
+   "id": "e7f5969f",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5636ef17",
+   "id": "063f3698",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdd7952c",
+   "id": "af77f88d",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -407,7 +407,7 @@
     "\n",
     "We use a slightly modified version of the algorithm recommended by Arellano.\n",
     "\n",
-    "- The appendix to [[Are08](https://python.quantecon.org/zreferences.html#id255)] recommends value function iteration until\n",
+    "- The appendix to [[Are08](https://jax.quantecon.org/zreferences.html#id255)] recommends value function iteration until\n",
     "  convergence, updating the price, and then repeating.  \n",
     "- Instead, we update the bond price at every value function iteration step.  \n",
     "\n",
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2184f132",
+   "id": "47931e2f",
    "metadata": {
     "hide-output": false
    },
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cdfeba1",
+   "id": "37babd05",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3bfe94a",
+   "id": "61da0cb6",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c648e01",
+   "id": "cd1d374b",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a055ea9",
+   "id": "5f192f98",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d054281",
+   "id": "046ba0e3",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b94c2187",
+   "id": "7eb0c47c",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f4afa8e",
+   "id": "e6e67ad1",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa13aa9f",
+   "id": "8c09882f",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8092f25a",
+   "id": "4ac65f48",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74f48477",
+   "id": "cc2fb051",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the arrays declared as static (compile-time constants) in order to help the compiler."
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0296d1f",
+   "id": "3ec122c0",
    "metadata": {
     "hide-output": false
    },
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01fc1d7f",
+   "id": "0c999cec",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7391d733",
+   "id": "1ed70a17",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4320d8f4",
+   "id": "1afb1187",
    "metadata": {},
    "source": [
     "We can now write a function that will use the `Arellano_Economy` class and the\n",
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4e25b9f",
+   "id": "cfa3ee91",
    "metadata": {
     "hide-output": false
    },
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4587ef9",
+   "id": "a6c96a73",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -778,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d0f280d",
+   "id": "ab771cd5",
    "metadata": {
     "hide-output": false
    },
@@ -790,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8887270",
+   "id": "0d66d818",
    "metadata": {
     "hide-output": false
    },
@@ -802,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "862fd4c6",
+   "id": "2d24a0b9",
    "metadata": {
     "hide-output": false
    },
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f91f4e13",
+   "id": "afc0e291",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "868527fd",
+   "id": "41fda93b",
    "metadata": {
     "hide-output": false
    },
@@ -896,12 +896,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10c3300c",
+   "id": "bc96e05d",
    "metadata": {},
    "source": [
     "## Results\n",
     "\n",
-    "Let’s start by trying to replicate the results obtained in [[Are08](https://python.quantecon.org/zreferences.html#id255)].\n",
+    "Let’s start by trying to replicate the results obtained in [[Are08](https://jax.quantecon.org/zreferences.html#id255)].\n",
     "\n",
     "In what follows, all results are computed using Arellano’s parameter values.\n",
     "\n",
@@ -917,7 +917,7 @@
     "Arellano, where $ y_L $ and $ Y_H $ are particular below average and above average\n",
     "values of output $ y $.\n",
     "\n",
-    "![https://python-advanced.quantecon.org/https://python.quantecon.org/_static/lecture_specific/arellano/arellano_bond_prices.png](https://python-advanced.quantecon.org/https://python.quantecon.org/_static/lecture_specific/arellano/arellano_bond_prices.png)\n",
+    "![https://python-advanced.quantecon.org/https://jax.quantecon.org/_static/lecture_specific/arellano/arellano_bond_prices.png](https://python-advanced.quantecon.org/https://jax.quantecon.org/_static/lecture_specific/arellano/arellano_bond_prices.png)\n",
     "\n",
     "\n",
     "\n",
@@ -936,9 +936,9 @@
     "  of default.  \n",
     "\n",
     "\n",
-    "The next figure plots value functions and replicates the right hand panel of Figure 4 of [[Are08](https://python.quantecon.org/zreferences.html#id255)].\n",
+    "The next figure plots value functions and replicates the right hand panel of Figure 4 of [[Are08](https://jax.quantecon.org/zreferences.html#id255)].\n",
     "\n",
-    "![https://python-advanced.quantecon.org/https://python.quantecon.org/_static/lecture_specific/arellano/arellano_value_funcs.png](https://python-advanced.quantecon.org/https://python.quantecon.org/_static/lecture_specific/arellano/arellano_value_funcs.png)\n",
+    "![https://python-advanced.quantecon.org/https://jax.quantecon.org/_static/lecture_specific/arellano/arellano_value_funcs.png](https://python-advanced.quantecon.org/https://jax.quantecon.org/_static/lecture_specific/arellano/arellano_value_funcs.png)\n",
     "\n",
     "\n",
     "\n",
@@ -947,7 +947,7 @@
     "\n",
     "The next plot shows these default probabilities over $ (B', y) $ as a heat map.\n",
     "\n",
-    "![https://python-advanced.quantecon.org/https://python.quantecon.org/_static/lecture_specific/arellano/arellano_default_probs.png](https://python-advanced.quantecon.org/https://python.quantecon.org/_static/lecture_specific/arellano/arellano_default_probs.png)\n",
+    "![https://python-advanced.quantecon.org/https://jax.quantecon.org/_static/lecture_specific/arellano/arellano_default_probs.png](https://python-advanced.quantecon.org/https://jax.quantecon.org/_static/lecture_specific/arellano/arellano_default_probs.png)\n",
     "\n",
     "\n",
     "\n",
@@ -958,7 +958,7 @@
     "\n",
     "The grey vertical bars correspond to periods when the economy is excluded from financial markets because of a past default.\n",
     "\n",
-    "![https://python-advanced.quantecon.org/https://python.quantecon.org/_static/lecture_specific/arellano/arellano_time_series.png](https://python-advanced.quantecon.org/https://python.quantecon.org/_static/lecture_specific/arellano/arellano_time_series.png)\n",
+    "![https://python-advanced.quantecon.org/https://jax.quantecon.org/_static/lecture_specific/arellano/arellano_time_series.png](https://python-advanced.quantecon.org/https://jax.quantecon.org/_static/lecture_specific/arellano/arellano_time_series.png)\n",
     "\n",
     "\n",
     "\n",
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "003a813f",
+   "id": "5fcabfc4",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b86b190",
+   "id": "f15c2de9",
    "metadata": {},
    "source": [
     "## Exercise 10.1\n",
@@ -990,10 +990,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90184baa",
+   "id": "df8f30ba",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 10.1](https://python.quantecon.org/#arellano_ex1)\n",
+    "## Solution to[ Exercise 10.1](https://jax.quantecon.org/#arellano_ex1)\n",
     "\n",
     "Solution to[ Exercise 13.1](https://python-advanced.quantecon.org/#arella_ex1). Compute the value function, policy and equilibrium prices"
    ]
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2ca5691",
+   "id": "ffa33276",
    "metadata": {
     "hide-output": false
    },
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eb93cbf",
+   "id": "fecc47f1",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of Arellano (2008)"
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a84e009",
+   "id": "fb747ad2",
    "metadata": {
     "hide-output": false
    },
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ebb55d6",
+   "id": "9b62e988",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1067,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ec73724",
+   "id": "d014bc82",
    "metadata": {
     "hide-output": false
    },
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eb5f70b",
+   "id": "aa3af7b2",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ab6742d",
+   "id": "a8b7122f",
    "metadata": {
     "hide-output": false
    },
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c8d2b54",
+   "id": "37580666",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1132,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e112f05",
+   "id": "dec091d6",
    "metadata": {
     "hide-output": false
    },
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72698808",
+   "id": "e24cf0c1",
    "metadata": {
     "hide-output": false
    },
@@ -1196,7 +1196,7 @@
   }
  ],
  "metadata": {
-  "date": 1683530831.2018552,
+  "date": 1683534858.989327,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
