--- a/opt_savings.ipynb
+++ b/opt_savings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5b17f179",
+   "id": "3fd5ba1d",
    "metadata": {},
    "source": [
     "# Optimal Savings\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fc4818d",
+   "id": "9304c598",
    "metadata": {
     "hide-output": false
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e99667bc",
+   "id": "1c2b1fe7",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57f48315",
+   "id": "c985d848",
    "metadata": {
     "hide-output": false
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4cb3d61",
+   "id": "49671d0e",
    "metadata": {},
    "source": [
     "Use 64 bit floats with JAX in order to match NumPy code\n",
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b28f2ee4",
+   "id": "1b95194a",
    "metadata": {
     "hide-output": false
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d833e04",
+   "id": "bc2e3a10",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a721cc36",
+   "id": "33ac7366",
    "metadata": {
     "hide-output": false
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "227f58b1",
+   "id": "cb636ac2",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbb5d064",
+   "id": "4f245f23",
    "metadata": {
     "hide-output": false
    },
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96a3e419",
+   "id": "0b1d4677",
    "metadata": {
     "hide-output": false
    },
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35fb31d8",
+   "id": "91fb9be6",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5306d39",
+   "id": "dcdd62b7",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f63c508",
+   "id": "13c8c25b",
    "metadata": {
     "hide-output": false
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed419d9d",
+   "id": "45ca6240",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed980db9",
+   "id": "e7bb5a52",
    "metadata": {
     "hide-output": false
    },
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58017c45",
+   "id": "29ff23e6",
    "metadata": {
     "hide-output": false
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "026b3f4b",
+   "id": "9343e6ef",
    "metadata": {},
    "source": [
     "and the Bellman operator $ T $"
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd6d9307",
+   "id": "2db0f8f3",
    "metadata": {
     "hide-output": false
    },
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b75159d9",
+   "id": "bd8f0c4a",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2756a81",
+   "id": "c34d0f16",
    "metadata": {
     "hide-output": false
    },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ee4c10c",
+   "id": "81f90dd5",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17e8b507",
+   "id": "887055f8",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dec27e3",
+   "id": "32013323",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52cf04a3",
+   "id": "b72afced",
    "metadata": {},
    "source": [
     "## JIT compiled versions"
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e69b4886",
+   "id": "5acc1c70",
    "metadata": {
     "hide-output": false
    },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84999335",
+   "id": "f135c5a8",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "586e87da",
+   "id": "2ad1edc6",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79a9da79",
+   "id": "6b0cccc8",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "690842ef",
+   "id": "579db87a",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a3afc5f",
+   "id": "aac8dafe",
    "metadata": {},
    "source": [
     "## Plots\n",
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54c8cf32",
+   "id": "b6396ec9",
    "metadata": {
     "hide-output": false
    },
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b62594a7",
+   "id": "07428fc5",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "173c30bf",
+   "id": "c0fd08ac",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be6ac0d5",
+   "id": "4c5cb5c7",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3efa0882",
+   "id": "8fd4afec",
    "metadata": {
     "hide-output": false
    },
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93ee8412",
+   "id": "dd357dad",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdcb79da",
+   "id": "da0a62ee",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +730,7 @@
   }
  ],
  "metadata": {
-  "date": 1683530831.5864875,
+  "date": 1683534859.356912,
   "filename": "opt_savings.md",
   "kernelspec": {
    "display_name": "Python",
