--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a366a6bb",
+   "id": "23c0027d",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baf17bb3",
+   "id": "dcdc5e56",
    "metadata": {
     "hide-output": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "217b73e0",
+   "id": "def56271",
    "metadata": {},
    "source": [
     "Let’s check the backend used by JAX and the devices available"
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42fa06ab",
+   "id": "c1f4f052",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c7bca7d",
+   "id": "a78dea2c",
    "metadata": {},
    "source": [
     "## Lorenz Curves and the Gini Coefficient\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e001b691",
+   "id": "d347dc10",
    "metadata": {},
    "source": [
     "### Lorenz Curves\n",
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8f30e69",
+   "id": "ce000e5d",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aecd280f",
+   "id": "df3b4c68",
    "metadata": {},
    "source": [
     "Let’s suppose that"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1604eb1",
+   "id": "3c685e04",
    "metadata": {
     "hide-output": false
    },
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9f102e8",
+   "id": "723ea592",
    "metadata": {},
    "source": [
     "is data representing the wealth of 10,000 households.\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdcf98a1",
+   "id": "af8ab107",
    "metadata": {
     "hide-output": false
    },
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e5f6c47",
+   "id": "26a1cb37",
    "metadata": {
     "hide-output": false
    },
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b9ec126",
+   "id": "4b3fc21c",
    "metadata": {
     "hide-output": false
    },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3110c401",
+   "id": "a81fac42",
    "metadata": {},
    "source": [
     "Here is another example, which shows how the Lorenz curve shifts as the\n",
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f309ae09",
+   "id": "b2c5d33d",
    "metadata": {
     "hide-output": false
    },
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36635383",
+   "id": "21d76ccd",
    "metadata": {
     "hide-output": false
    },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4969e54",
+   "id": "39f45d90",
    "metadata": {},
    "source": [
     "You can see that, as the tail parameter of the Pareto distribution increases, inequality decreases.\n",
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea4f62a0",
+   "id": "a43b7e9e",
    "metadata": {},
    "source": [
     "### The Gini Coefficient\n",
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8807d17",
+   "id": "61a83394",
    "metadata": {
     "hide-output": false
    },
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2772616a",
+   "id": "7e2cacf9",
    "metadata": {},
    "source": [
     "Let’s see if the Gini coefficient computed from a simulated sample matches\n",
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "430f1d97",
+   "id": "5eff416b",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69854648",
+   "id": "81c2b939",
    "metadata": {
     "hide-output": false
    },
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea15f63d",
+   "id": "03d19565",
    "metadata": {},
    "source": [
     "The simulation shows that the fit is good."
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e698a37",
+   "id": "fb07202f",
    "metadata": {},
    "source": [
     "## A Model of Wealth Dynamics\n",
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05c470e5",
+   "id": "d7fd8331",
    "metadata": {},
    "source": [
     "## Implementation using JAX\n",
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af10fa88",
+   "id": "ab0228c8",
    "metadata": {
     "hide-output": false
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22181ada",
+   "id": "17fdf347",
    "metadata": {},
    "source": [
     "Here’s a function to create the Model with the given parameters"
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "834c9ec2",
+   "id": "5d860bba",
    "metadata": {
     "hide-output": false
    },
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b00a96d",
+   "id": "d4ad424f",
    "metadata": {},
    "source": [
     "The following function updates one period with the given current wealth and persistent state."
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88f55b21",
+   "id": "9817991e",
    "metadata": {
     "hide-output": false
    },
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6bdad2c",
+   "id": "f6adf5d3",
    "metadata": {},
    "source": [
     "Here’s function to simulate the time series of wealth for individual households using a `for` loop and JAX."
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d410286",
+   "id": "466452bb",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b15ad4ea",
+   "id": "ebb79170",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution using the above function."
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72925b80",
+   "id": "049db13a",
    "metadata": {
     "hide-output": false
    },
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b15a8cce",
+   "id": "91334122",
    "metadata": {
     "hide-output": false
    },
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c86892c",
+   "id": "bbacb43b",
    "metadata": {},
    "source": [
     "Running the above function again will be even faster because of JAX’s JIT."
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fac5f15d",
+   "id": "1e3f7b6a",
    "metadata": {
     "hide-output": false
    },
@@ -586,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4209417",
+   "id": "c96136f9",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e865c3c",
+   "id": "b304e883",
    "metadata": {},
    "source": [
     "We can further try to optimize and speed up the compile time of the above function by replacing `for` loop with [`jax.lax.scan`](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.scan.html)."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2a458a8",
+   "id": "c03cd36d",
    "metadata": {
     "hide-output": false
    },
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a601c644",
+   "id": "92c54beb",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution and also observe the difference in time between `wealth_time_series_jax` and `wealth_time_series_for_loop_jax`."
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3abd6e5e",
+   "id": "28853825",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a85833c",
+   "id": "1db23b21",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe4b6a61",
+   "id": "71b8bf89",
    "metadata": {},
    "source": [
     "Running the above function again will be even faster because of JAX’s JIT."
@@ -699,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fbfb083",
+   "id": "dc1b6066",
    "metadata": {
     "hide-output": false
    },
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93c7fbf2",
+   "id": "9cbeaf8e",
    "metadata": {
     "hide-output": false
    },
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ca383ec",
+   "id": "4feda713",
    "metadata": {},
    "source": [
     "Now here’s function to simulate a cross section of households forward in time."
@@ -736,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c57d7481",
+   "id": "7fc78824",
    "metadata": {
     "hide-output": false
    },
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96fe56ad",
+   "id": "e0dc9da3",
    "metadata": {},
    "source": [
     "## Applications\n",
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ee6a077",
+   "id": "e3068c4d",
    "metadata": {},
    "source": [
     "### Inequality Measures\n",
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79604021",
+   "id": "48266d36",
    "metadata": {
     "hide-output": false
    },
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da19936d",
+   "id": "68fc8613",
    "metadata": {},
    "source": [
     "Now we investigate how the Lorenz curves associated with the wealth distribution change as return to savings varies.\n",
@@ -825,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8972a11",
+   "id": "7760cecb",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5afe20f3",
+   "id": "8f8c02c8",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24100b0b",
+   "id": "f89f1c90",
    "metadata": {
     "hide-output": false
    },
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a41343b",
+   "id": "0f24c47b",
    "metadata": {},
    "source": [
     "Once again, we see that inequality increases as returns on financial income\n",
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a52570e1",
+   "id": "9cfffa44",
    "metadata": {
     "hide-output": false
    },
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d773228f",
+   "id": "9898fc75",
    "metadata": {},
    "source": [
     "We see that greater volatility has the effect of increasing inequality in this model."
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "128287a7",
+   "id": "fa914316",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3d65079",
+   "id": "23b8756d",
    "metadata": {},
    "source": [
     "## Exercise 6.1\n",
@@ -955,10 +955,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbd5da23",
+   "id": "bd31b028",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 6.1](https://python.quantecon.org/#wd_ex1)\n",
+    "## Solution to[ Exercise 6.1](https://jax.quantecon.org/#wd_ex1)\n",
     "\n",
     "Here is one solution, which produces a good match between theory and\n",
     "simulation."
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2b3418d",
+   "id": "de31c067",
    "metadata": {
     "hide-output": false
    },
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3e3d3d2",
+   "id": "e0573036",
    "metadata": {},
    "source": [
     "In general, for a Pareto distribution, a higher tail index implies less weight\n",
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d9c06da",
+   "id": "44a6355e",
    "metadata": {},
    "source": [
     "## Exercise 6.2\n",
@@ -1029,10 +1029,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f857a44",
+   "id": "7b11aff9",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 6.2](https://python.quantecon.org/#wd_ex2)\n",
+    "## Solution to[ Exercise 6.2](https://jax.quantecon.org/#wd_ex2)\n",
     "\n",
     "First let’s generate the distribution:"
    ]
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b92f4dfe",
+   "id": "2713ff7d",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6491170",
+   "id": "726f8d01",
    "metadata": {},
    "source": [
     "Let’s define a function to get the rank data"
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "199d36e0",
+   "id": "089312a6",
    "metadata": {
     "hide-output": false
    },
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5222a3c",
+   "id": "41f29e4c",
    "metadata": {},
    "source": [
     "Now let’s see the rank-size plot:"
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6c9c05b",
+   "id": "b43a5524",
    "metadata": {
     "hide-output": false
    },
@@ -1109,7 +1109,7 @@
   }
  ],
  "metadata": {
-  "date": 1683530831.6828308,
+  "date": 1683534859.4496026,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
